[gd_scene load_steps=5 format=2]

[ext_resource path="res://RocknRollOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://favicon.png" type="Texture" id=2]
[ext_resource path="res://MineSweeperMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 50
font_data = ExtResource( 1 )

[node name="MineSweeperMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CenterContainer2"]
margin_left = 362.0
margin_right = 662.0
margin_bottom = 148.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Sweeper !
"
text = "Sweeper !
"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 374.0
margin_right = 1024.0
margin_bottom = 474.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 201.0
margin_right = 822.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
text = "Beginner (8x8)"
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 417.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
text = "Intermediate (16x16)"
icon = ExtResource( 2 )

[node name="Button3" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 421.0
margin_right = 621.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
text = "Expert (16x30)"
icon = ExtResource( 2 )

[node name="score" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Button" to="." method="start_easy_game"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Button2" to="." method="start_medium_game"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Button3" to="." method="start_expert_game"]
